Se agrega formulario y background a cards y header

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <main class="supergrid">
         <section class="products">
             <h1> MIS PRODUCTOS:</h1>
-            <article class="container">
-                <div class="card">
+            <ul class="container">
+                <li class="card">
                     <img src="images/goku.jpg" class="card_img">
                     <div class="card-container-info">
                         <p>Nombre</p>
@@ -28,9 +28,9 @@
                             <img src="images/delete.svg" alt="Icono de basurero">
                         </div>
                     </div>
-                </div>
+                </li>
 
-                <div class="card">
+                <li class="card">
                     <img src="images/pokebola.jpg" class="card_img">
                     <div class="card-container-info">
                         <p>Nombre</p>
@@ -39,9 +39,9 @@
                             <img src="images/delete.svg" alt="Icono de basurero">
                         </div>
                     </div>
-                </div>
+                </li>
 
-                <div class="card">
+                <li class="card">
                     <img src="images/bb8.jpg" class="card_img">
                     <div class="card-container-info">
                         <p>Nombre</p>
@@ -50,9 +50,9 @@
                             <img src="images/delete.svg" alt="Icono de basurero">
                         </div>
                     </div>
-                </div>
+                </li>
 
-                <div class="card">
+                <li class="card">
                     <img src="images/charizard.jpg" class="card_img">
                     <div class="card-container-info">
                         <p>Nombre</p>
@@ -61,15 +61,42 @@
                             <img src="images/delete.svg" alt="Icono de basurero">
                         </div>
                     </div>
-                </div>
-            </article>
+                </li>
+
+                <li class="card">
+                    <img src="images/mario.jpg" class="card_img">
+                    <div class="card-container-info">
+                        <p>Nombre</p>
+                        <div class="card-container-value">
+                            <p>$ 00.00</p>
+                            <img src="images/delete.svg" alt="Icono de basurero">
+                        </div>
+                    </div>
+                </li>
+
+                <li class="card">
+                    <img src="images/batman.jpg" class="card_img">
+                    <div class="card-container-info">
+                        <p>Nombre</p>
+                        <div class="card-container-value">
+                            <p>$ 00.00</p>
+                            <img src="images/delete.svg" alt="Icono de basurero">
+                        </div>
+                    </div>
+                </li>
+            </ul>
 
         </section>
         
 
         <section class="add">
-            <h1> MIS PRODUCTOS:</h1>
-
+            <h1> AGREGAR PRODUCTO:</h1>
+            <form>
+                <div class="form-group">
+                    <input id="name" name="name" type="text" placeholder="Nombre" required>
+                    <input id="price" name="price" type="number" placeholder="Precio" required>
+                    <input id="image" name="image" type="file" placeholder="Imagen" required>
+                </div>
         </section>
 
     </main>
