--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
     <title>Alura Geek</title>
 </head>
 
@@ -40,7 +43,17 @@
 
         <script src="js/mostrarProductos.js" type="module"></script>
         <script src="js/crearProducto.js" type="module"></script>
+
     </main>
+
+    <footer>
+        <div class="minifooter">
+            <img src="images/controlvideo.svg" alt="Imagen de un control de consola de videojuego" class="footer_logo">
+            <h1>Alura Geek</h1>
+            <img src="images/controlvideo.svg" alt="Imagen de un control de consola de videojuego" class="footer_logo">
+        </div>
+        <p> Desarrollado por Victoria Bernal <br> ALURA LATAM 2024 </p>
+    </footer>
 
 </body>
 
