Se modifica url para fetch de base de datos

--- a/crearProducto.html
+++ b/crearProducto.html
@@ -20,7 +20,7 @@
     <main>
         <section class="add">
             <h1> AGREGAR PRODUCTO:</h1>
-            <form class="formulario" data-formulario>
+            <form class="formulario" id="add_form" data-formulario>
                 <div class="form-group">
                     <input id="name" name="name" type="text" placeholder=" Nombre" required data-nombre>
                     <input id="price" name="price" type="number" placeholder=" Precio (00.00)" required data-precio>
