--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     </header>
 
     <main class="supergrid">
-        <button class="add_btn"> Agregar producto </button>
+        <a href="./crearProducto.html">
+            <button class="add_btn"> Agregar producto </button>
+        </a>
         <section class="products">
             <h1> MIS PRODUCTOS:</h1>
             <ul class="container" data-lista>
