Se modifican estilos de botones, grid de productos

--- a/crearProducto.html
+++ b/crearProducto.html
@@ -18,6 +18,9 @@
         <img src="images/controlvideo.svg" alt="Imagen de un control de consola de videojuego" class="logo">
     </header>
     <main>
+        <a href="./index.html">
+            <button class="inicio_btn"> Inicio </button>
+        </a>
         <section class="add">
             <h1> AGREGAR PRODUCTO:</h1>
             <form class="formulario" id="add_form" data-formulario>
