Se mejoran estilos responsivos en página index y página de crear productos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <img src="images/controlvideo.svg" alt="Imagen de un control de consola de videojuego" class="logo">
-        <h1>Alura Geek</h1>
+        <h1 class="header_title">Alura Geek</h1>
         <img src="images/controlvideo.svg" alt="Imagen de un control de consola de videojuego" class="logo">
     </header>
 
